
Fixed behavior of i/o flushing in rcontrib with -c > 1 (averaging).  Thanks
to Lars Grobe for help identifying this problem.

Fixed bug in depth-of-field blur where view distance was measured from
fore clipping plane rather than viewpoint.  Thanks to Peter A-B for
pointing this out.

Added options to dctimestep to allow multiple time steps (-n)
and multiple output pictures or sensor files (-o).  Also added -i
option to specify float (-if) or double (-id) input for sky matrix.

Created gendaymtx program to compute annual sky patch matrix based
on Ian Ashdown's implementation of Perez all-weather sky model.
Output can be sent directly to dctimestep in ASCII or binary stream.

Replaced existing gendaylit.c with improved version from Wendelin Sprenger
and Jan Wienold of ISE.

Improved accuracy of ambient calculation for large -ad settings.  Thanks
to Lars Grobe for noticing the problem.

Added -r option to gendaymtx to rotate the sky the specified number of
degrees about the zenith as suggested by A. McNeil.

Axel Jacobs added -pal eco color map that does a blue-red-yellow scale.

Created bsdf2klems tool to convert from various BSDF representations to
Klems basis matrix in XML file.

Fixed problem with inappropriate reciprocity enforcement on tensor
tree reduction in genBSDF.  (Thanks to A.McNeil for discovering issue.)

Fixed bug in isotropic tensor tree sampling for impinging rays
exactly normal to surface.  Thanks to Peter Apian-Bennewitz for
discovering and pointing out the error.

Fixed double-counting bug in mirror material with alternate type.
Thanks to David Geisler-Moroder for spotting the problem and helping
to fix it.

Created rcollate program to resize and transpose matrix data for Andy
McNeil's 5-phase annual simulation method.

Added epw2wea conversion program by Christoph Reinhart.

Implemented Perlin's improved noise function with help from Rahul Narain.
This will change the appearance of renderings using this function.